2011-03-02 Jiri Sadek (2.6.1)

    * index for history.request_id

2011-02-28 Jiri Sadek, Juraj Vicenik, Jan Zima (2.6.0)

    * Logger reference ids changed in public_request (added resolve_request_id
      column, renamed logd_request_id to create_request_id)

    * Datatype of logger id-sequence changed to bigint

    * notify_request table

    * message_status table dropped, all moved to enum_send_status

    * Logger partition indexes

    * Logger request_property_name.name attribute expanded to varchar(256) and
      fixed bad values

2010-08-10 Jiri Sadek, Juraj Vicenik (2.4.1)

    * Logger property renaming - upgrade script

2010-07-22 Jiri Sadek, Juraj Vicenik, Jan Zima (2.4.0)

    * New tables for registrar group and certification management

    * Notification of expiration letters refactoring

    * New enumeration tables for message send status

    * Logger procedures fixes

    * Schema cleaning (unused tables deleted)

2010-03-29 Jiri Sadek (2.3.2)

    * banking data migration fixes

2010-03-22 Jiri Sadek (2.3.1)

    * Banking changes:
	    - payment type default value
		- migration fixes

2010-02-16 Jiri Sadek, Juraj Vicenik, Jan Zima (2.3.0)

    * Audit (Logger) tables added

    * New tables for banking refactoring (constraint changes)

    * Registrars
	    - 'regex' column added for payment pairing by memo message
		- access to zone limited by 'todate' column in registrarinvoice

    * Typo in messages and mail templates fixes

    * Separation of upgrade script (schema modification, data modification)

    * Dropped constrains to action table (except action_xml table)

2010-01-08 Jiri Sadek, Juraj Vicenik (2.2.0)

    * public request <-> action tables dependency refactoring started

    * Enum directory implementation - publish flag

2009-06-30 Jiri Sadek, Ales Dolezal, Jaroslav Benkovsky (2.1.4)
    * fixing minor manager, configure scripts issues

    * fixing tables initialization (bank_account, price_list)
