@@ -18,5 +18,16 @@ DROP INDEX request_data_content_idx;
 
 ALTER TABLE request_property_name ALTER COLUMN name TYPE VARCHAR(256);
 
+---
+--- Ticket #4953 - bigint
+---
+CREATE OR REPLACE FUNCTION create_tmp_table(tname VARCHAR) 
+RETURNS VOID AS $$
+BEGIN
+ EXECUTE 'CREATE TEMPORARY TABLE ' || tname || ' (id BIGINT PRIMARY KEY)';
+ EXCEPTION
+ WHEN DUPLICATE_TABLE THEN EXECUTE 'TRUNCATE TABLE ' || tname;
+END;
+$$ LANGUAGE plpgsql;
 
 
